<resources>
    <string name="app_name">FoodExpo</string>
    <string name="food_expo">Welcome to Food Expo!</string>
    <string name="login_user">Login As User</string>
    <string name="login_restaurant">Login As Restaurant</string>
    <string name="login_id">Login ID:</string>
    <string name="login">Login</string>
    <string name="password">Password:</string>
    <string name="not_a_user">Not a user? Click here to go back</string>
    <string name="not_a_restaurant">Not a restaurant? Click here to go back</string>
    <string name="order">Order Now!</string>
    <string name="signup">Sign Up</string>
    <string name="lbl_signup_accountType">Account type:</string>
    <string name="lbl_first_name">First Name:</string>
    <string name="lbl_last_name">Last Name:</string>
    <string name="lbl_email">Email:</string>
    <string name="btn_user_signup">User</string>
    <string name="btn_restaurant_signup">Restaurant</string>
    <string name="lbl_city">City:</string>
    <string name="lbl_prov">Province:</string>
    <string name="lbl_country">Country:</string>
    <string name="lbl_postal">Postal Code:</string>
    <string name="lbl_sign_up">Please select account type</string>
    <string name="label_address">Address:</string>
    <string name="lbl_restaurant_name">Restaurant Name:</string>
    <string name="lbl_business_id">Business ID:</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_password">Password:</string>
    <string name="button_sign_up_submit">Submit</string>
    <string name="logo">Logo</string>
    <string name="user_acct_setup">User Account Setup</string>
    <string name="typeLocation">Enter Your Delivery Location</string>
    <string name="restaurantLocation">Enter your Location</string>
    <string name="setLocation">Set As Delivery Location</string>
    <string name="mapLocation">Use Google Maps</string>
    <string name="or">OR</string>
    <string name="hello_world">Hello World</string>
    <string name="editItem">Edit Menu Item</string>
    <string name="addItem">Add Menu Item</string>
    <string name="menuItems">Menu Items</string>
    <string name="changeImage">Change Image</string>
    <string name="no_button">No thanks</string>
    <string name="yes_button">Yes please!</string>
    <string name="preferences">Preferences</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="description_of_food_item">description of food item</string>
    <string name="description">Description</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="incorrectPassword">Incorrect Password!</string>
    <string name="emailNotFound">E-mail address not found!</string>
    <string name="logout">Logout</string>
    <string name="save_button">Save</string>
    <string name="price">Price</string>
    <string name="addItemSuccess">Item successfully added!</string>
    <string name="addItemFailure">Item was not added.</string>
    <string name="editItemSuccess">Item updated successfully!</string>
    <string name="editItemFailure">Item was not updated.</string>
    <string name="profile">Profile</string>
    <string name="lbl_user_name">User Name</string>
    <string name="please_select_item">Please select an item to edit</string>
    <string name="error">Something went wrong</string>

</resources>
