<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_address_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.eamal27.foodexpo.GetAddressText">

    <TextView
        android:id="@+id/lbl_address_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_address"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edittext_addressone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minWidth="250dp"/>

    <EditText
        android:id="@+id/edittext_addresstwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minWidth="250dp"/>

    <TextView
        android:id="@+id/lbl_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_email"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edittext_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minWidth="250dp"/>

    <TextView
        android:id="@+id/lbl_prov"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_prov"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edittext_prov"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minWidth="250dp"/>

    <TextView
        android:id="@+id/lbl_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_country"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edittext_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minWidth="250dp"/>

    <TextView
        android:id="@+id/lbl_postal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_postal"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edittext_postal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minWidth="250dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_up_submit"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="submitAddress"/>


</LinearLayout>
