<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eamal27.foodexpo.UserProfile">

    <TextView
        android:id="@+id/centerline"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/centerShim"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/centerline"
        android:layout_toLeftOf="@id/centerShim"
        android:layout_toStartOf="@id/centerShim"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/changeImage"
            android:layout_alignParentTop="true"
            android:paddingRight="15dp"
            android:src="@android:drawable/ic_menu_gallery"
            android:id="@+id/userProfileImage"
            />
        <Button
            android:id="@+id/changeImage"
            android:text="@string/changeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:layout_centerHorizontal="true"
            android:onClick="changeImage"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/centerShim"
        android:layout_toEndOf="@+id/centerShim"
        android:layout_above="@+id/menuItemsLabel">

        <TextView
            android:id="@+id/userName"
            android:text="@string/lbl_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/userPhone"
            android:text="@string/lbl_phone"
            android:layout_below="@id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/userEmail"
            android:layout_below="@id/userPhone"
            android:text="@string/lbl_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/userAddress"
            android:layout_below="@id/userEmail"
            android:text="@string/label_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/userCityProvCountry"
            android:layout_below="@id/userAddress"
            android:text="@string/lbl_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/userPostal"
            android:layout_below="@id/userCityProvCountry"
            android:text="@string/lbl_postal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>
