<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_user"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.eamal27.foodexpo.SignUpUserActivity">

    <TextView
        android:id="@+id/lbl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="User Account Setup"
        android:textSize="12pt"/>

    <TextView
        android:id="@+id/lbl_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_first_name"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edittext_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minWidth="200dp"/>

    <TextView
        android:id="@+id/lbl_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_last_name"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edittext_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:minWidth="200dp"/>

    <TextView
        android:id="@+id/lbl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_email"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:minWidth="250dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_up_submit"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="submitUserRegistration"/>

</LinearLayout>
