<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eamal27.foodexpo.WelcomeActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food_expo"
        />


    <Button
        android:id="@+id/restaurant_login"
        android:text="@string/login_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="restaurantLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="150dp" />

    <Button
        android:id="@+id/user_login"
        android:text="@string/login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="userLogin"
        android:layout_above="@id/restaurant_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
