<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eamal27.foodexpo.SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12pt"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/lbl_sign_up"/>

    <Button
        android:id="@+id/btn_signup_as_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_user_signup"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="10pt"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="userSignup"/>

    <Button
        android:id="@+id/btn_signup_as_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_restaurant_signup"
        android:layout_below="@+id/btn_signup_as_user"
        android:layout_centerHorizontal="true"
        android:textSize="10pt"
        android:padding="20dp"
        android:onClick="restaurantSignup"/>




</RelativeLayout>
