<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_food_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.eamal27.foodexpo.FoodItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="right"
                android:textSize="14pt"
                android:text="$12.99"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:textSize="16pt"
                android:text="@string/food_item_name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingBottom="10dp"
                android:text="@string/description_of_food_item"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="16dp"
                android:paddingBottom="5dp"
                android:background="#e1000000"
                android:textColor="#fff"
                android:textSize="15pt"
                android:text="@string/restaurant_name"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:background="#e1000000"
                android:src="@drawable/common_google_signin_btn_text_light"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="16dp"
                android:paddingBottom="10dp"
                android:background="#e18b8a8a"/>

            <GridView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="#e18b8a8a">


            </GridView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
