<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eamal27.foodexpo.LoginActivity">

    <TextView
        android:id="@+id/loginType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/getUsername"
        android:layout_alignParentTop="true"
        android:textSize="12pt"/>

    <EditText
        android:id="@id/getUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/usernameLabel"
        android:layout_toEndOf="@+id/usernameLabel" />

    <EditText
        android:id="@+id/getPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_below="@id/getUsername"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/passwordLabel"
        android:layout_toEndOf="@+id/passwordLabel" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_id"
        android:layout_marginLeft="54dp"
        android:layout_marginStart="54dp"
        android:layout_alignBaseline="@+id/getUsername"
        android:layout_alignBottom="@+id/getUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_alignBaseline="@+id/getPassword"
        android:layout_alignBottom="@+id/getPassword"
        android:layout_toLeftOf="@+id/getUsername"
        android:layout_toStartOf="@+id/getUsername" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/go_back"
        android:clickable="true"
        android:onClick="goBack"
        />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_marginBottom="76dp"
        android:layout_above="@+id/go_back"
        android:layout_centerHorizontal="true"
        android:onClick="checkLogin"
        />


</RelativeLayout>
